fixed spacing alignment of range boxes for clone

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -2950,7 +2950,7 @@ input {
     display: none;
 }
 
-.page-node-add, .page-node-edit, page-node-clone {
+.page-node-add, .page-node-edit, .page-node-clone {
     h1#page-title {
         font-family: "Gotham A","Gotham B";
         font-size: 16px;
